--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <!--servicios-->
     <section class="container" id="servicios"><br>
         <h2>YA ERES POSPAGO CLARO</h2>
-        <p>MAS BENEFICIOS! </p>
-        <h3>PORTATE YA CONVIERTERE EN </h3>
+        <p>MAS BENEFICIOS! </p><br><br><br>
+        <h3>PORTATE YA CONVIERTERE EN </h3><br>
         <h2>TODO CLARO</h2>
         <div class="porta"><img src="images/porta.jpg"></div>
         <br><br>
@@ -132,12 +132,10 @@
                     <h3> Comunidad CLARO </h3>
                     <img src="images/fami.jpg" width="50%">
 
-                    <p> 350 Megas TV Avanzada 94900 ¡2 Meses a mitad de precio! 
+                    <p> 500 Megas TV Avanzada 79900 ¡2 Meses a mitad de precio! 
 
                     </p>
-                    <p> 250 Megas la TV Con el Win+  99.900 ¡2 Meses a mitad de precio! 
-                        
-                    </p>
+                   
                 </div>
                 <div class="box">
                     <h3> CLARO Drive</h3>
@@ -176,7 +174,7 @@
 
 
             </div>
-            <p>2 Meses a mitad de precio </p>
+            <p> 1 mes gratis y los siguientes 2 a mitad de precio </p>
         </section>
         <section>
         </section><br>
